@@ -1,3 +1,8 @@
+2005-01-06  Erik Hjortsberg  <erik@katastrof.nu>
+
+	* make water a child of the world
+	* fixed foliage
+
 2005-01-05  Erik Hjortsberg  <erik@katastrof.nu>
 
 	* clean up the code
